fix text-overflow

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -228,7 +228,7 @@ select {
 
   p {
     color: $v-btn-color;
-    max-width: 500px;
+    word-break: break-all;
   }
 }
 
